# permuto_sdf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  setup.py
cmake/: FindDataLoaders.cmake  FindEasyPBR.cmake
config/: create_overview_image.cfg  train_4d_sdf.cfg  train_hashsdf.cfg  train_nerf.cfg  train_sdf_from_mesh.cfg  visualize_sdf_isolines.cfg
docker/: Dockerfile  build.sh  nvidia-container-runtime-script.sh  run.sh
docker/experimental/: Dockerfile  build.sh  run.sh
hash_sdf_py/: train_4d_sdf.py  train_hashsdf.py  train_nerf.py  train_sdf_from_mesh.py
hash_sdf_py/callbacks/: callback_utils.py  phase.py  scores.py  state_callback.py  tensorboard_callback.py  viewer_callback.py  visdom_callback.py  wandb_callback.py
hash_sdf_py/experiments/evaluation/: create_my_images.py  create_my_meshes.py  evaluate_chamfer_distance.py  evaluate_psnr.py
hash_sdf_py/experiments/evaluation/DTUeval-python/: eval.py
hash_sdf_py/experiments/figures/: create_overview_image.py
hash_sdf_py/experiments/serial_training/: serial_train.py
hash_sdf_py/experiments/visualization/: render_from_frame.py  vis_4d_sdf.py  visualize_sdf_isolines.py
hash_sdf_py/models/: models.py  modules.py
hash_sdf_py/optimizers/: adan.py  grad_scaler.py  lazyadam.py  shampoo.py
hash_sdf_py/optimizers/old/: matrix_functions.py  vectoradam.py
hash_sdf_py/paths/: data_paths.py  list_of_checkpoints.py  list_of_training_scenes.py
hash_sdf_py/utils/: aabb.py  common_utils.py  hahsdf_utils.py  hashsdf_utils.py  nerf_utils.py  sdf_utils.py
hash_sdf_py/volume_rendering/: volume_rendering_funcs.py  volume_rendering_modules.py
include/hash_sdf/: HashSDF.cuh  NGPGui.h  OccupancyGrid.cuh  PyBridge.h  RaySampler.cuh  RaySamplesPacked.cuh  Sphere.cuh  TrainParams.h  VolumeRendering.cuh
include/permuto_sdf/: NGPGui.h  OccupancyGrid.cuh  PermutoSDF.cuh  RaySampler.cuh  RaySamplesPacked.cuh  Sphere.cuh  TrainParams.h  VolumeRendering.cuh
kernels/hash_sdf/: HashSDFGPU.cuh  OccupancyGridGPU.cuh  RaySamplerGPU.cuh  RaySamplesPackedGPU.cuh  SphereGPU.cuh  VolumeRenderingGPU.cuh  mat4.h
kernels/permuto_sdf/: OccupancyGridGPU.cuh  PermutoSDFGPU.cuh  RaySamplerGPU.cuh  RaySamplesPackedGPU.cuh  SphereGPU.cuh  VolumeRenderingGPU.cuh  mat3.h  pcg32.h
permuto_sdf_py/: train_4d_sdf.py  train_nerf.py  train_permuto_sdf.py  train_sdf_from_mesh.py
permuto_sdf_py/callbacks/: callback.py  callback_utils.py  phase.py  state_callback.py  tensorboard_callback.py  viewer_callback.py  vis.py  visdom_callback.py  wandb_callback.py
permuto_sdf_py/experiments/evaluation/: create_my_images.py  create_my_meshes.py  evaluate_chamfer_distance.py  evaluate_psnr.py
permuto_sdf_py/experiments/evaluation/DTUeval-python/: README.md
permuto_sdf_py/experiments/figures/: create_overview_image.py
permuto_sdf_py/experiments/run_custom_dataset/: run_custom_dataset.py
permuto_sdf_py/experiments/serial_training/: serial_train.py
permuto_sdf_py/experiments/visualization/: render_from_frame.py  render_orbit.py  vis_4d_sdf.py  visualize_sdf_isolines.py
permuto_sdf_py/models/: models.py  modules.py
permuto_sdf_py/optimizers/: radam.py
permuto_sdf_py/paths/: data_paths.py
permuto_sdf_py/schedulers/: linearlr.py  multisteplr.py  warmup.py
permuto_sdf_py/utils/: aabb.py  common_utils.py  nerf_utils.py  permuto_sdf_utils.py  sdf_utils.py
permuto_sdf_py/volume_rendering/: volume_rendering_funcs.py  volume_rendering_modules.py
src/: HashSDF.cu  NGPGui.cxx  OccupancyGrid.cu  PermutoSDF.cu  PyBridge.cxx  RaySampler.cu  RaySamplesPacked.cu  Sphere.cu  TrainParams.cxx  VolumeRendering.cu
